--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,531 @@
-.App {
-  text-align: center;
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+	font-family: sans-serif;
+	background-color: white;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+img{
+	width: 160%;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+header,footer{
+    
+	height: 150px;
+	background-color: rgb(195, 54, 143);
+	box-shadow: 0px 0px 3px rgb(195, 54, 143);
+}
+
+.container{
+	
+	max-width: 1500px;
+	margin: 2px;
+	padding: 15px;
+	background-color:rgb(195, 54, 143) ;
+	min-height: 100%;
+}
+header .container, footer .container{
+	height: 100%;
+}
+
+.header_items, .footer_items{
+	height: 100%;
+}
+.row{
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
+
+.header_items-logo{
+    margin-left: 30px;
+   width: 100px;
+   
+    
+}
+
+.header_items-nav ul{
+	list-style-type: none;
+	display: flex;
+}
+.header_items-nav ul li a{
+display: block;
+text-decoration: none;
+color: #000;
+padding: 5px 20px;
+font-size: 20px;
+font-family: Arial, Helvetica, sans-serif;
+transition: color .30s ease;
+}
+.header_items-nav ul li a:hover{
+color: white;
+}
+.header_items-nav ul li a.active{
+	color: white;
+}
+
+h1.h1 {
+    color:rgb(195, 54, 143) ;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+.footer_items-nav ul{
+	
+list-style-type: none;
+display: flex;
+}
+
+.footer_items-nav ul li{
+	padding: 5px 20px;
+	margin-right: 15px;
+}
+.footer_items-nav ul li a{
+	
+	display: block;
+	text-decoration: none;
+	width: 30px;
+}
+
+.footer_items-copyright a{
+	width: 50px;
+	text-decoration: none;
+	color: #000;
+}
+ main{
+ 	height: 100vh;
+ 	flex: 1;
+ }
+
+ main .container{
+	
+ 	max-width: 1800px;
+	margin: 0 auto;
+	padding: 15px;
+	background-color: rgb(254, 199, 207);
+	min-height: 100%;
+ }
+
+
+
+
+
+
+
+
+.card{
+background-color: white;
+	width: 280px;
+	height:450px;
+	border: 3px solid rgb(195, 54, 143) ;
+	border-radius: 2%;
+-webkit-box-shadow: -5px -2px 14px -9px #000000; 
+box-shadow: -5px -2px 14px -9px #000000;
+
+}
+
+.cloth{
+	margin-top: 20px;
+}
+.content{
+    margin-top: 5px;
+	width: 70%;
+	display:flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	
+}
+
+.buy{
+    margin-top: 5px;
+	margin-left: 80px;
+	
+	display:inline-block;
+	border: 20px solid  rgb(195, 54, 143);
+	 border-radius: 10%;
+	
+	 background-color:  rgb(195, 54, 143);
+	
+}
+
+.card2{
+    background-color: white;
+        width: 280px;
+        height:450px;
+        border: 3px solid rgb(195, 54, 143) ;
+        border-radius: 2%;
+    -webkit-box-shadow: -5px -2px 14px -9px #000000; 
+    box-shadow: -5px -2px 14px -9px #000000;
+
+}
+.card0{
+	margin-top: 5px;
+	background-color: white;
+	width: 280px;
+	height:450px;
+	border: 3px solid rgb(195, 54, 143) ;
+	border-radius: 2%;
+-webkit-box-shadow: -5px -2px 14px -9px #000000; 
+box-shadow: -5px -2px 14px -9px #000000;
+}
+
+.cardL{
+	margin-top: 5px;
+	background-color: white;
+	width: 280px;
+	height:450px;
+	border: 3px solid rgb(195, 54, 143) ;
+	border-radius: 2%;
+-webkit-box-shadow: -5px -2px 14px -9px #000000; 
+box-shadow: -5px -2px 14px -9px #000000;
+}
+.content{
+    margin-top: 5px;
+	width: 70%;
+	display:flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	
+}
+
+
+.buy{
+    margin-top: 5px;
+	margin-left: 80px;
+	
+	display:inline-block;
+	border: 20px solid  rgb(195, 54, 143);
+	 border-radius: 10%;
+	
+	 background-color:  rgb(195, 54, 143);
+}
+
+.card3{
+	
+    background-color: white;
+        width: 280px;
+        height:450px;
+        border: 3px solid rgb(195, 54, 143) ;
+        border-radius: 2%;
+    -webkit-box-shadow: -5px -2px 14px -9px #000000; 
+    box-shadow: -5px -2px 14px -9px #000000;
+
+}
+
+.content{
+    margin-top: 5px;
+	width: 70%;
+	display:flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	
+}
+
+
+.buy{
+    margin-top: 5px;
+	margin-left: 80px;
+	
+	display:inline-block;
+	border: 20px solid  rgb(195, 54, 143);
+	 border-radius: 10%;
+	
+	 background-color:  rgb(195, 54, 143);
+}
+.obscure1{
+	margin-top: 20px;
+	height: 294px;
+	margin-left: 38px;
+	width: 200px;
+}
+
+.obscure{
+	margin-top: 30px;
+	height: 294px;
+	margin-left: 38px;
+	width: 200px;
+}
+.habits{
+	margin-top: 30px;
+	height: 294px;
+	margin-left: 38px;
+	width: 200px;
+}
+
+.ayzek{
+	margin-top: 30px;
+	height: 294px;
+	margin-left: 38px;
+	width: 200px;
+}
+.chocolate{
+	margin-top: 30px;
+	height: 294px;
+	margin-left: 38px;
+	width: 200px;
+}
+.hesse{
+	margin-top: 30px;
+	height: 294px;
+	margin-left: 38px;
+	width: 200px;
+}
+.harry{
+	margin-top: 35px;
+	margin-left: 43px;
+	width: 188px;
+}
+.hugo{
+	margin-top: 20px;
+	margin-left: 43px;
+	width: 188px;
+}
+.kafka{
+	height: 290px;
+	margin-top: 15px;
+	margin-left: 38px;
+	width: 200px;
+}
+.card4{
+	margin-top: 5px;
+    background-color: white;
+        width: 280px;
+        height:450px;
+        border: 3px solid rgb(195, 54, 143) ;
+        border-radius: 2%;
+    -webkit-box-shadow: -5px -2px 14px -9px #000000; 
+    box-shadow: -5px -2px 14px -9px #000000;
+
+}
+
+.content{
+    margin-top: 5px;
+	width: 70%;
+	display:flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	
+}
+
+
+.buy{
+    margin-top: 5px;
+	margin-left: 80px;
+	
+	display:inline-block;
+	border: 20px solid  rgb(195, 54, 143);
+	 border-radius: 10%;
+	
+	 background-color:  rgb(195, 54, 143);
+}
+
+.contact_map{
+	margin-bottom: 70px;
+}
+
+
+
+.buy a{
+	color: white;
+	 text-decoration: none;
+}
+
+h1.h2{
+	color:rgb(195, 54, 143) ;
+}
+
+
+.price a{
+	text-align: center;
+	display: flex;
+	text-decoration: none;
+	font-size:20px;
+font-weight: bold;
+color: #000;
+
+}
+
+h1{
+	font-family:  sans-serif;
+}
+
+
+main .container .cloth{
+height: 294px;
+	width: 275px;
+
+		border-radius: 2%;
+
+}
+
+
+
+
+
+
+
+
+.text1{
+	text-align: center;
+   
+    font-family: Arial;
+}
+
+
+.text2{
+	color: grey;
+	text-align: center;
+	font-family: Arial;
+}
+
+.h4{
+	text-indent: 10px;
+	
+} 
+
+
+.y{
+	text-align: center;
+}
+
+.price .y a{
+	display: flex;
+	justify-content: space-around;
+	font-size: 20px;
+font-weight: bold;
+
+}
+
+
+
+
+
+
+
+
+.contact{
+	justify-content: space-around;
+}
+
+
+.contact_form,.contact_map{
+	width: 600px;
+}
+.form-item{
+	margin-bottom: 10px;
+}
+
+.form-item input,.form-item select,.form-item textarea{
+	width: 100%;
+	display: block;
+	padding: 10px;
+	border: 1px solid #ebebeb;
+	border-radius: 5px;
+	margin-top: 10px;
+}
+
+.form-item textarea{
+	height: 200px;
+}
+
+.btn{
+	color: white;
+	margin-left: 15px;
+	margin-top: 20px;
+	margin-bottom: 30px;
+	display: inline-block;
+	border: 20px solid  rgb(195, 54, 143);
+	border-radius: 20%;
+	background-color: rgb(195, 54, 143) ;
+	
+}
+
+
+
+.h2{
+
+	color: rgb(195, 54, 143);
+	margin-left: 74px;
+
+}
+
+.new{
+	color: rgb(195, 54, 143);
+	margin-bottom: 20px;
+}
+
+
+.nkar img{
+		width: 500px;
+	height: 500px;
+	flex-wrap: wrap;
+}
+
+
+
+
+
+.container .topright{
+
+position: static;
+bottom:100px;
+right: 90px;
+	width: 380px;
+	height: 300px;
+
+  font-size: 15px;
+	border: 2px solid  rgb(195, 54, 143);;
+
+
+}
+
+
+
+#customers {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#customers td, #customers th {
+  border: 1px solid orange;
+  padding: 8px;
+}
+
+#customers tr:nth-child(even){background-color: #f2f2f2;}
+
+#customers tr:hover {background-color: #ddd;}
+
+#customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: pink;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+
+
+
+.wiki h1{
+	color: rgb(195, 54, 143);
+	text-decoration: underline;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.nikenkar{
+	height: 300px;
+	width: 300px;
 }
